--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ body{display:flex;flex-direction:column;min-height:100vh;overflow:hidden;backgro
   .app-main{padding:20px 16px 28px}
   .app-main>.container{max-width:100%}
   .sheet-card-header{padding-bottom:18px;margin-bottom:18px}
-  .log-window{border-radius:12px;border:1px solid var(--border);box-shadow:0 10px 22px rgba(15,23,42,.1)}
-  .log-list{padding:10px 12px}
+  .log-window{border-radius:0;border:none;box-shadow:none}
+  .log-list{padding:0}
 }
 @media (min-width:1100px){
   .app-main{min-width:0;padding:36px clamp(32px,5vw,72px)}
