--- a/index.html
+++ b/index.html
@@ -297,8 +297,9 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-row-stats{margin-left:auto;display:flex;align-items:center;gap:8px;flex-wrap:wrap;justify-content:flex-end;min-height:0}
 @media (max-width:520px){
   .log-row-info{flex:1 1 auto;width:100%}
-  .log-row-main{align-items:flex-start;row-gap:0}
-  .log-row-datestats{width:100%;margin-left:0;flex-wrap:wrap}
+  .log-row-main{align-items:center;row-gap:4px}
+  .log-row-datestats{width:auto;margin-left:auto;flex-wrap:nowrap;justify-content:flex-end}
+  .log-row-datestats .log-row-date{flex:0 1 auto;justify-content:flex-end;text-align:right}
   .log-row-stats{margin-left:0;justify-content:flex-start;width:auto}
   .log-row-stats.log-row-stats--mobile{margin-left:auto}
 }
