Change avatar fallback image to 'd20 flat.png'

--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,7 @@ const AVATAR_MANIFEST=Object.freeze({
   'Zandaraxs Inventory':'zandarax.png',
   'Zandaraxs Bastion':'zandarax.png'
 });
-const AVATAR_FALLBACK_PATH='d20.png';
+const AVATAR_FALLBACK_PATH='d20 flat.png';
 const avatarCache=new Map();
 const avatarPreloadPromises=new Map();
 let avatarLoadToken=0;
