Remove fallback avatar background gradient

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body{display:flex;flex-direction:column;min-height:100vh;overflow:hidden;backgro
 .avatar{display:block;width:auto;height:72px;max-width:100%;border-radius:0;box-shadow:none;object-fit:contain}
 .avatar.avatar-hidden{display:none}
 .avatar.has-avatar{cursor:zoom-in;}
-.avatar.avatar-fallback{background:linear-gradient(135deg,#dbeafe,#bfdbfe);}
+.avatar.avatar-fallback{background:none;}
 .avatar:focus-visible{outline:2px solid rgba(26,115,232,.35);outline-offset:3px}
 h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01em}
 .header-main{display:flex;flex-direction:column;gap:6px;min-width:0;flex:1 1 auto}
